--- a/data/Algorithm.tex
+++ b/data/Algorithm.tex
@@ -3,7 +3,7 @@
 
 \section{概述}
 
-本章基于马尔可夫链和Perron–Frobenius算法阐述一种新的用于分布式电力系统经济调度的过渡矩阵Q优化方法，提出了一套完整的分布式ED问题的物理和数学模型，实现了尽可能快的迭代。构建了分布式通信协议，并证明了迭代结束时一定可以得到的是帕累托最优。最后通过一个算例说明了共识达到的具体方法。
+本章基于马尔可夫链和Perron–Frobenius算法\cite{yan2019consensus}阐述一种新的用于分布式电力系统经济调度的过渡矩阵Q优化方法，提出了一套完整的分布式ED问题的物理和数学模型，实现了尽可能快的迭代。构建了分布式通信协议，并证明了迭代结束时一定可以得到的是帕累托最优。最后通过一个算例说明了共识达到的具体方法。
 
 \section{分布式经济调度模型}
 
