--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -45,7 +45,8 @@ pages={1-5},
 keywords={data mining;multi-agent systems;pattern clustering;power engineering computing;power generation dispatch;smart power grids;economic dispatch problem;smart grid;distributed consensus approach;intelligent agent;autonomous agent;practical approach;consensus based control;multiagent systems;wireless sensor networks;robotics;data mining;practical systems;consensus algorithm;Smart grids;Mathematical model;Consensus algorithm;Multi-agent systems;Control systems;Power generation;Economics;Consensus;Multi-agent;autonomous;Smart grid;Arduino;Distributed;EDP},
 doi={10.1109/RAEE.2018.8706900},
 ISSN={null},
-month={Oct},}
+month={Oct}
+}
 
 
 @inproceedings{suzuki2019shapebots,
@@ -146,4 +147,13 @@ month={Oct},}
   booktitle={Proceedings of the 18th annual ACM symposium on User interface software and technology},
   pages={63--72},
   year={2005}
+}
+
+@inproceedings{yan2019consensus,
+  title={Consensus-Based Distributed Economic Dispatch with Optimized Transition Matrix},
+  author={Yan, Xinfei and Zhong, Haiwang and Wang, Jianxiao and Tan, Zhenfei},
+  booktitle={2019 IEEE Power \& Energy Society General Meeting (PESGM)},
+  pages={1--5},
+  year={2019},
+  organization={IEEE}
 }
