--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -202,7 +202,7 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
     \label{tab:Error-A}
 \end{table}
 
-注意表~\ref{tab:Error-A}中9号节点没有办法接收到其他节点的信息，$A_{9,9}=1$是指9号节点能接受到自己的信息，9号节点因此成为错误节点，如果不加握手验证的话，9号节点就成为了害群之马，使得整个网络错误的收敛到9号节点的值9上，而非正确的5.5。
+注意表~\ref{tab:Error-A}中9号节点没有办法接收到其他节点的信息，成为了和其他节点分立的强连通分量，$A_{9,9}=1$是指9号节点能接受到自己的信息，9号节点因此成为错误节点，如果不加握手验证的话，9号节点就成为了害群之马，使得整个网络错误的收敛到9号节点的值9上，而非正确的5.5。
 
 迭代20次曲线如图~\ref{fig:123456-Error}所示。
 
