--- a/data/UI.tex
+++ b/data/UI.tex
@@ -5,7 +5,7 @@
 
 \section{实物可视化界面}
 
-每一个小车代表一个机组/节点，小车在坐标系中位置代表各自出力，随着迭代次数进行变化。（不一定是位置，也可能是颜色，坐标系也可能会是二维的），新加进去的或者撤出来就会重新平衡。物理场景和算法的映射关系如表~\ref{tab:Real-Unreal}。
+在动态迭代可视化模式下，工作平面视为一个二维坐标系，每一个小车代表一个机组节点，小车在坐标系中纵轴位置代表各自当前出力，随着迭代进行变化，同时隐性地仿真了通信过程，进行去中心化的自治优化，当节点数（新加入或撤出）或任意节点数据变化系统会重新开始动态迭代。物理场景和算法的映射关系如表~\ref{tab:Real-Unreal}。表现形式不一定是位置，也可能是颜色，坐标系也可能会是三维的。
 
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
