--- a/data/UI.tex
+++ b/data/UI.tex
@@ -7,6 +7,8 @@
 
 在动态迭代可视化模式下，工作平面视为一个二维坐标系，每一个小车代表一个机组节点，小车在坐标系中纵轴位置代表各自当前出力，随着迭代进行变化，同时隐性地仿真了通信过程，进行去中心化的自治优化，当节点数（新加入或撤出）或任意节点数据变化系统会重新开始动态迭代。物理场景和算法的映射关系如表~\ref{tab:Real-Unreal}。表现形式不一定是位置，也可能是颜色，坐标系也可能会是三维的。
 
+可以通过小车一开始摆放的位置设定初值，迭代过程中或结束后任意时刻可以手动移动小车来改变任意节点的值以干预算法的执行
+
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
 \begin{table}[htbp]
