--- a/data/UI.tex
+++ b/data/UI.tex
@@ -8,6 +8,9 @@
 在通信演示例子中，三个固定的小车代表节点，每条有向边上一个小车代表通信协议传输的数据包。
 当任何数据包发送的时候，此有向边上对应的小车就会移动到发送节点的旁边（一定距离内认为两者可以相互通信）接收数据包，并显示在它的屏幕上。之后他将朝着目标节点移动，到达目标通信节点周围一定范围后，将数据包发送给目标节点，目标节点再进行一系列的运算，并将过程显示在其屏幕上。
 
+位于车顶的LED颜色既可以代表不同系列的数据，也可以通过渐变色表达第三个独立的变量。
+
+
 在动态迭代可视化模式下，工作平面视为一个二维坐标系，每一个小车代表一个机组节点，小车在坐标系中纵轴位置代表各自当前出力，随着迭代进行变化，同时隐性地仿真了通信过程，进行去中心化的自治优化，当节点数（新加入或撤出）或任意节点数据变化系统会重新开始动态迭代。物理场景和算法的映射关系如表~\ref{tab:Real-Unreal}。表现形式不一定是位置，也可能是颜色，坐标系也可能会是三维的。
 
 可以通过小车一开始摆放的位置设定初值，迭代过程中或结束后任意时刻可以手动移动小车来改变任意节点的值以干预算法的执行
