--- a/data/Algorithm.tex
+++ b/data/Algorithm.tex
@@ -32,11 +32,11 @@
 
 \subsection{数学模型-有向图邻接矩阵}
 
-在图论中，\textbf{图}（Graph）用于表示物件与物件之间的关系，是图论的基本研究对象。一张图由一些小圆点（称为\textbf{顶点}或\textbf{结点}）和连结这些圆点的直线或曲线（称为\textbf{边}）组成。
+% 在图论中，\textbf{图}（Graph）用于表示物件与物件之间的关系，是图论的基本研究对象。一张图由一些小圆点（称为\textbf{顶点}或\textbf{结点}）和连结这些圆点的直线或曲线（称为\textbf{边}）组成。
 
-如果给图的每条边规定一个方向，那么得到的图称为有向图，其边也称为有向边。在有向图中，与一个节点相关联的边有出边和入边之分，而与一个有向边关联的两个点也有始点和终点之分。相反，边没有方向的图称为无向图。
+% 如果给图的每条边规定一个方向，那么得到的图称为有向图，其边也称为有向边。在有向图中，与一个节点相关联的边有出边和入边之分，而与一个有向边关联的两个点也有始点和终点之分。相反，边没有方向的图称为无向图。
 
-对有向图而言，顶点的度还可分为出度和入度。一个顶点的出度（Out-degree）为i，是指有i条边以该顶点为起点，或说与该点关联的出边共有i条。入度的概念也类似。
+% 对有向图而言，顶点的度还可分为出度和入度。一个顶点的出度（Out-degree）为i，是指有i条边以该顶点为起点，或说与该点关联的出边共有i条。入度的概念也类似。
 
 在图论和计算机科学中，邻接矩阵是用于表示有限图的方阵。矩阵的元素指示图中的顶点对是否相邻。
 
@@ -107,15 +107,19 @@
 
 \subsection{F-范数调整过渡矩阵Q的元素值}
 
-使用特定的矩阵范数（matrix norm，模）来简化之后的迭代运算，这里采用弗罗贝尼乌斯范数（Frobenius norm）或称希尔伯特-施密特范数（Hilbert–Schmidt norm），这个范数可用不同的方式定义：
+% 使用特定的矩阵范数（matrix norm，模）来简化之后的迭代运算，这里采用弗罗贝尼乌斯范数（Frobenius norm）或称希尔伯特-施密特范数（Hilbert–Schmidt norm），这个范数可用不同的方式定义：
+
+使用Frobenius norm来简化之后的迭代运算，定义：
 
 \begin{equation}
     \|A\|_{F}=\sqrt{\sum_{i=1}^{m} \sum_{j=1}^{n}\left|a_{i j}\right|^{2}}=\sqrt{\operatorname{trace}\left(A^{*} A\right)}=\sqrt{\sum_{i=1}^{\min \{m, n\}} \sigma_{i}^{2}}
 \end{equation}
 
-这里A*表示A的共轭转置，σi是A的奇异值（特征值），并使用了迹函数。弗罗贝尼乌斯范数与Kn上欧几里得范数非常类似，来自所有矩阵的空间上一个内积。
+这里$A^*$表示$A$的共轭转置，$σ_i$是$A$的奇异值（特征值）
 
-弗罗贝尼乌斯范数是服从乘法的且在数值线性代数中非常有用。这个范数通常比诱导范数容易计算。
+% 这里A*表示A的共轭转置，σi是A的奇异值（特征值），并使用了迹函数。弗罗贝尼乌斯范数与Kn上欧几里得范数非常类似，来自所有矩阵的空间上一个内积。
+
+% 弗罗贝尼乌斯范数是服从乘法的且在数值线性代数中非常有用。这个范数通常比诱导范数容易计算。
 
 在这里有：
 
