--- a/data/Movement.tex
+++ b/data/Movement.tex
@@ -3,7 +3,7 @@
 
 \section{三轮全向轮移动平台运动学模型分析}
 
-全向轮与麦克纳姆轮的共同点在于他们都由两大部分组成：轮毂和辊子（roller）。轮毂是整个轮子的主体支架，辊子则是安装在轮毂上的鼓状物。全向轮的轮毂轴与辊子转轴相互垂直，而麦克纳姆轮的轮毂轴与辊子转轴呈 45° 角。
+% 全向轮与麦克纳姆轮的共同点在于他们都由两大部分组成：轮毂和辊子（roller）。轮毂是整个轮子的主体支架，辊子则是安装在轮毂上的鼓状物。全向轮的轮毂轴与辊子转轴相互垂直，而麦克纳姆轮的轮毂轴与辊子转轴呈 45° 角。
 
 经典的三轮全向轮(Omni Wheel)平台的全向轮中心平均分布在一个圆上，结构示意图如图~\ref{fig:Tri-Omni-Dynamic}所示。
 
