--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -83,10 +83,11 @@ MURATA的 CSTLS16M0X51-A0 \footnote{\url{https://www.murata.com/zh-cn/products/p
 村田的CSTLS系列陶瓷振荡子（CERALOCK）特征如下：
 
 \begin{enumerate}
-    \item 无需外部负载电容器即可构建振荡电路。系列产品拥有内置电容值各不相同的各种型号，可适用于各种集成电路。
+    % \item 无需外部负载电容器即可构建振荡电路。系列产品拥有内置电容值各不相同的各种型号，可适用于各种集成电路。
+    \item 无需外部负载电容器即可构建振荡电路。
     \item 在宽温度范围内稳定。
     \item 结构小巧、重量轻并表现出优异的耐冲击性能。
-    \item 可以设计用无需调校的振荡器电路
+    % \item 可以设计用无需调校的振荡器电路
     \item 性价比高，可用性可靠。
 \end{enumerate}
 
@@ -98,11 +99,11 @@ XBee模块的底座是两排1x10 Pitch = 2mm 的母排。
 
 \section{USB UART 异步串行数据传输芯片}
 
-USB转UART芯片稳定程度和价格均为FT232>CH340>PL2303。
+% USB转UART芯片稳定程度和价格均为FT232>CH340>PL2303。
 
-FT232RL-REEL价格最贵，1片要27.61，1000+批量价格也要16.24每个。FT232RL/BL的优势就FTDI一直在更新驱动发布在官网，驱动经过微软认证，兼容性最好。内部固化了USB底层协议，转出来的是虚拟串口，可以固定COM口号。电路简单，数据传输稳定性好。FT232RL自带晶振，可以转RS232/TTL（常用）及RS422,RS485 高端市场专用。
+% FT232RL-REEL价格最贵，1片要27.61，1000+批量价格也要16.24每个。FT232RL/BL的优势就FTDI一直在更新驱动发布在官网，驱动经过微软认证，兼容性最好。内部固化了USB底层协议，转出来的是虚拟串口，可以固定COM口号。电路简单，数据传输稳定性好。FT232RL自带晶振，可以转RS232/TTL（常用）及RS422,RS485 高端市场专用。
 
-PL2303最便宜，但波特率在115200时就有可能出现延迟。
+% PL2303最便宜，但波特率在115200时就有可能出现延迟。
 
 经过测试，CH340\footnote{\url{http://www.wch.cn/products/CH340.html}}可以满足需求，且批量购买1000+只要1.47一片。
 
@@ -225,17 +226,17 @@ WS2812B模块原理图如图~\ref{fig:Circuit-8}所示。
 
 \section{布线}
 
-布线方法参考下文：
+% 布线方法参考下文：
 
-Press W or select Custom Track Width from the context menu to type in a custom track width/via size.
+% Press W or select Custom Track Width from the context menu to type in a custom track width/via size.
 
-To activate the router tool press the Interactive Router button Interactive Router Button or the X key. 
+% To activate the router tool press the Interactive Router button Interactive Router Button or the X key. 
 
-Pressing V or selecting Place Through Via from the context menu while routing a track attaches a via at the end of the trace being routed. Pressing V again disables via placement. Clicking in any spot establishes the via and continues routing (unless 'Shift' is held).
+% Pressing V or selecting Place Through Via from the context menu while routing a track attaches a via at the end of the trace being routed. Pressing V again disables via placement. Clicking in any spot establishes the via and continues routing (unless 'Shift' is held).
 
-Pressing / or selecting Switch Track Posture from the context menu toggles the direction of the initial track segment between straight or diagonal.
+% Pressing / or selecting Switch Track Posture from the context menu toggles the direction of the initial track segment between straight or diagonal.
 
-The router can drag track segments, corners and vias. To drag an item, click on it with Ctrl key pressed, hover the mouse and press G or select Drag Track/Via from the context menu.
+% The router can drag track segments, corners and vias. To drag an item, click on it with Ctrl key pressed, hover the mouse and press G or select Drag Track/Via from the context menu.
 
 布线之后的PCB详见附录~\ref{sec:PCB}。
 
