--- a/data/Environment.tex
+++ b/data/Environment.tex
@@ -130,11 +130,11 @@ avrdude参数解释见表~\ref{tab:avrdude}
     \label{fig:Arduino-Fritzing}
 \end{figure}
 
-Arduino集成开发环境（Arduino IDE）包含了一个用于写代码的文本编辑器、一个消息区、一个文本控制台以及一个带有常用功能按钮和文本菜单的工具栏。连接Arduino之后，软件能给所连接的控制板上传程序，还能与控制板相互通信。
+% Arduino集成开发环境（Arduino IDE）包含了一个用于写代码的文本编辑器、一个消息区、一个文本控制台以及一个带有常用功能按钮和文本菜单的工具栏。连接Arduino之后，软件能给所连接的控制板上传程序，还能与控制板相互通信。
 
-使用Arduino软件（IDE）编写的代码被称为项目（sketches），这些项目写在文本编辑器中，以.ino的文件形式保存
+% 使用Arduino软件（IDE）编写的代码被称为项目（sketches），这些项目写在文本编辑器中，以.ino的文件形式保存
 
-IDE UI中上传按钮的作用是编译代码并且上传到选定的控制板中，注意：如果你使用的是专门的编程器，你需要在点击按钮时按住电脑的“shift”键，显示的文字会变成“使用编程器上传”。
+% IDE UI中上传按钮的作用是编译代码并且上传到选定的控制板中，注意：如果你使用的是专门的编程器，你需要在点击按钮时按住电脑的“shift”键，显示的文字会变成“使用编程器上传”。
 
 在上传之前，需要在 Tools - Board 和 Tools - Port 中选定开发板类型和端口，在本项目中，选择Arduino/Genuino Mega 2560 (Arduino/Genuino Mega 2560
 An ATmega2560 running at 16 MHz with auto-reset, 16 Analog In, 54 Digital I/O and 15 PWM.)开发板。
