--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,7 @@
 %%% 正文部分
 \mainmatter
 \input{data/Intro.tex}
-\input{data/Overview.tex}
+% \input{data/Overview.tex}
 \input{data/Simple.tex}
 \input{data/Algorithm.tex}
 \input{data/Platform.tex}
