注释掉Code和PCB附录和所有引用

--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -238,9 +238,9 @@ WS2812B模块原理图如图~\ref{fig:Circuit-8}所示。
 
 % The router can drag track segments, corners and vias. To drag an item, click on it with Ctrl key pressed, hover the mouse and press G or select Drag Track/Via from the context menu.
 
-布线之后的PCB详见附录~\ref{sec:PCB}。
+% 布线之后的PCB详见附录~\ref{sec:PCB}。
 
-正面如图~\ref{fig:CircuitPCB-F}，背面如图~\ref{fig:CircuitPCB-B}。
+布线之后的PCB正面如图~\ref{fig:CircuitPCB-F}，背面如图~\ref{fig:CircuitPCB-B}。
 
 \begin{figure}[htbp]
     \centering
