--- a/data/PCB-v3.tex
+++ b/data/PCB-v3.tex
@@ -67,7 +67,7 @@ TX0和RX0倒序，纠正了错误。
 
 考虑到走线问题，同一功能的信号线组并在一起。
 
-布线之后的PCB详见附录~\ref{sec:PCB}。
+% 布线之后的PCB详见附录~\ref{sec:PCB}。
 
 布线之后的PCB(未显示铺铜)如图~\ref{fig:MisakaPCBv3-1}、~\ref{fig:MisakaPCBv3}。
 
