--- a/data/Simple.tex
+++ b/data/Simple.tex
@@ -92,7 +92,7 @@ $u_{\mathrm{i}}(t)$为$x_{\mathrm{i}}(t)$的控制变量，服从：
 
 \section{简化后的平均值共识算法}
 
-运行附录~\ref{sec:Consensus}中的Python3脚本我们可以得到：
+% 运行附录~\ref{sec:Consensus}中的Python3脚本我们可以得到：
 
 简单取平均后得到过渡矩阵为
 
