--- a/main.tex
+++ b/main.tex
@@ -85,8 +85,8 @@
 \begin{appendix}
     \input{data/Appendix-EN}
     \input{data/Appendix-CN}
-    \input{data/Appendix-PCB}
-    \input{data/Appendix-Code}
+    % \input{data/Appendix-PCB}
+    % \input{data/Appendix-Code}
 %\input{data/appendix01}
 \end{appendix}
 
