--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -1,4 +1,4 @@
-\chapter{PCB 2.0 改进设计和测试}
+\chapter{PCB v2.0 设计和测试}
 \label{cha:PCB-v2}
 
 本章设计源文件和历史版本详见\url{https://github.com/TingliangZhang/Misaka-PCB-v2}，其中包括分层原理图、PCB设计、Gerber。
