--- a/data/cover.tex
+++ b/data/cover.tex
@@ -69,6 +69,11 @@
 
 % 定义中英文摘要和关键字
 \begin{cabstract}
+
+  本文介绍了用于一个智能电网算法评估的可视化测试平台，同时也是用于开发桌面实体集群交互界面的可扩展软硬件开源平台。
+
+  该平台包括一组定制设计的3全向轮机器人（每个直径10厘米），通过覆盖在活动表顶部的微点图案进行的高精度定位，以及用于应用程序开发和控制的软件框架，同时仍保持价格合理 （在原型机阶段，每个价格约为30美元）。 我们通过使用该平台开发新的简化的智能电网分布式算法应用来说明桌面集群用户界面的潜力。
+
   基于区块链技术和共识算法，面向泛在电力物联网建设，考虑实际应用环境中的问题（如噪音、干扰、局部通信中断等问题），开发了一套测试平台并模拟实际应用，以应对传统集中式优化通信负担过重、过度依赖部分节点、灵活性不足等问题的挑战。
 
   通过嵌入式可视化集群硬件平台来直观的表现算法的运行，同时也探索一种新的展示算法的方式。
@@ -81,12 +86,17 @@
     \item 考虑了硬件存在的通信中断和恶意节点等现实问题。
   \end{itemize}
 
+
 \end{cabstract}
 
 % 如果习惯关键字跟在摘要文字后面，可以用直接命令来设置，如下：
 % \ckeywords{\TeX, \LaTeX, CJK, 模板, 论文}
 
 \begin{eabstract}
+  In this article, we present a visualized swarm testbed for smart grid algorithm evaluation, also an extendable open-source open-hardware platform for developing tabletop tangible swarm interfaces.
+
+  The platform consists of a collection of custom-designed 3 omni-directional wheels robots each 10 cm in diameter, high accuracy localization through a microdot pattern overlaid on top of the activity sheets, and a software framework for application development and control, while remaining affordable (per unit cost about 30 USD at the prototype stage). We illustrate the potential of tabletop swarm user interfaces through a set of smart grid algorithm application scenarios developed with the platform.
+
   Based on blockchain technology and consensus algorithms, for the construction of ubiquitous electric power IoT, considering the problems in the actual application environment (such as noise, interference, local communication interruption, etc.), a test platform has been developed and simulated for practical applications Traditional centralized optimization challenges such as excessive communication burden, excessive dependence on some nodes, and insufficient flexibility.
 
   The embedded visualization cluster hardware platform is used to intuitively express the operation of the algorithm, and also explore a new way to display the algorithm.
@@ -98,6 +108,7 @@
     \item developed a cluster visualization platform and explored a new way to display algorithms.
     \item takes into account the practical problems of communication interruptions and malicious nodes in the hardware.
   \end{itemize}
+
 
 \end{eabstract}
 
