--- a/data/denotation.tex
+++ b/data/denotation.tex
@@ -1,6 +1,17 @@
 \begin{denotation}[3cm]
-\item[$E$] 能量
-\item[$T$] 时间
+    \item[$A$] 邻接矩阵
+    \item[$Q$] 过渡矩阵
+    \item[$p_{i}$] 出力
+    \item[$W_{i}$] 出力成本函数
+    \item[$\lambda_{i}\left(p_{i}\right)$] 边际成本函数
+    \item[$\beta_{i}$] 出力-价格灵敏度
+    \item[$\gamma_{i}$] 线性外推得到的零边际成本下假想机组出力
+    \item[$L_{i}$] 节点i处负荷
+    \item[$\underline{p}_{i}$] 机组出力上限
+    \item[$\bar{p}_{i}$] 机组出力下限
+    \item[$\alpha_{i}$] 机组假想最低成本
+    \item[$N$] 机组数量
+    \item[$\lambda$] 价格共识
 \end{denotation}
 
 
@@ -9,6 +20,8 @@
 
 % \printnomenclature[3cm]
 
+% \item[$E$] 能量
+% \item[$T$] 时间
 % \nomenclature{HPC}{高性能计算 (High Performance Computing)}
 % \nomenclature{cluster}{集群}
 % \nomenclature{Itanium}{安腾}
