--- a/data/PCB-v3.tex
+++ b/data/PCB-v3.tex
@@ -1,32 +1,27 @@
-\chapter{PCB 3.0 改进设计和测试}
+\chapter{最终版本PCB改进设计和测试}
 \label{cha:PCB-v3}
 
 \section{待改进问题}
 
-三路驱动丝印编号
+待改进问题如下：
 
-电池插头+-反向，以丝印标注
+\begin{itemize}
+    \item 三路驱动丝印编号
+    \item 电池插头+-反向，以丝印标注
+    \item 芯片周围留出clearance，方便拖焊。摆放可以考虑45度角摆放，方便密集的布线。
+    \item 最好改成单面有贴片元件的形式，方便SMT或者制作钢网涂锡膏。
+    \item 选用没有ThermalVias的芯片封装，否则容易焊锡粘到了ThermalVias上引起不平整。(但是没有不含ThermalPad的封装)
+    \item 留出STEP和DIR测试/备用引脚，以便板上有一两片DRV8825无法正常使用可以外接模块。
+    \item 12V和5V供电太细了，要注意供电可靠性。
+    \item 扩大PCB面积，从100mm到120mm直径圆内接正六边形。
+    \item Reset按钮封装不对。Reset电路中R22/D1,RESET BUTTON/C13不是必须的，可以画，可以不焊。
+    \item 发现CH340C的TX接到了Mega的TX上，RX接到了Mega的RX上，所以烧录Arduino时出现错误：
+\end{itemize}
 
-芯片周围留出clearance，方便拖焊。摆放可以考虑45度角摆放，方便密集的布线。
-
-最好改成单面有贴片元件的形式，方便SMT或者制作钢网涂锡膏。
-
-选用没有ThermalVias的芯片封装，否则容易焊锡粘到了ThermalVias上引起不平整。(但是没有不含ThermalPad的封装)
-
-留出STEP和DIR测试/备用引脚，以便板上有一两片DRV8825无法正常使用可以外接模块。
-
-12V和5V供电太细了，要注意供电可靠性。
-
-扩大PCB面积，从100mm到120mm直径圆内接正六边形。
-
-Reset按钮封装不对。Reset电路中R22/D1,RESET BUTTON/C13不是必须的，可以画，可以不焊。
-
-！！！发现CH340C的TX接到了Mega的TX上，RX接到了Mega的RX上，所以烧录Arduino时出现错误：
-
-\begin{tcolorbox}
-    avrdude: stk500v2\_ReceiveMessage(): timeout \\
-    avrdude: stk500v2\_getsync(): timeout communicating with programmer
-\end{tcolorbox}
+% \begin{tcolorbox}
+%     avrdude: stk500v2\_ReceiveMessage(): timeout \\
+%     avrdude: stk500v2\_getsync(): timeout communicating with programmer
+% \end{tcolorbox}
 
 
 \section{外形}
