--- a/data/PCB-v2.tex
+++ b/data/PCB-v2.tex
@@ -1,7 +1,9 @@
-\chapter{PCB v2.0 设计和测试}
+\chapter{商用版本设计和测试}
 \label{cha:PCB-v2}
 
 本章设计源文件和历史版本详见\url{https://github.com/TingliangZhang/Misaka-PCB-v2}，其中包括分层原理图、PCB设计、Gerber。
+
+商用版本面向未来人机交互研究者，另有开发者版本为进一步开发桌面集群硬件平台的开发者提供便捷，以下如未明确指出平台均指商用版本。
 
 总原理图如图~\ref{fig:Circuit-1}所示。
 
