--- a/data/cover.tex
+++ b/data/cover.tex
@@ -14,7 +14,7 @@
   %=========
   % 中文信息
   %=========
-  ctitle={分布式能源资源的自治优化仿真平台研发},
+  ctitle={一种用于智能电网分布式算法仿真和人机交互研究的桌面集群硬件平台},
   cdegree={工学学士},
   cdepartment={电机工程与应用电子技术系},
   cmajor={电气工程及其自动化},
@@ -38,7 +38,7 @@
   %=========
   % 英文信息
   %=========
-  etitle={Research and development of autonomous optimization simulation platform for distributed energy resources},
+  etitle={Interactive Swarm Testbed for Smart Grid Distributed Algorithm Test and Evaluation},
   % 这块比较复杂，需要分情况讨论：
   % 1. 学术型硕士
   %    edegree：必须为Master of Arts或Master of Science（注意大小写）
