--- a/data/cover.tex
+++ b/data/cover.tex
@@ -14,7 +14,7 @@
   %=========
   % 中文信息
   %=========
-  ctitle={一种用于智能电网分布式算法仿真和人机交互研究的桌面集群硬件平台},
+  ctitle={用于智能电网算法可视化和人机交互研究的集群硬件平台},
   cdegree={工学学士},
   cdepartment={电机工程与应用电子技术系},
   cmajor={电气工程及其自动化},
