--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@
 \input{data/Intro.tex}
 % \input{data/Overview.tex}
 \input{data/Simple.tex}
-\input{data/Algorithm.tex}
+% \input{data/Algorithm.tex}
 \input{data/Platform.tex}
 \input{data/Motor.tex}
 \input{data/Movement.tex}
