--- a/data/Model.tex
+++ b/data/Model.tex
@@ -147,7 +147,7 @@ v3底盘打印效果如图~\ref{fig:Bottom5}。
 
 \section{Model v5}
 
-v4的PCB支撑柱容易断裂，所以改用M3双通六角铜柱，如图~\ref{fig:Pillar}，配合 M3x3 304不锈钢圆头十字盘头螺丝使用，如图~\ref{fig:Screw}。
+v4的PCB支撑柱容易断裂，所以改用M3双通六角铜柱，如图~\ref{fig:Pillar}，配合 M3x3 螺丝使用，如图~\ref{fig:Screw}。
 
 \begin{figure}[htbp]
     \centering
@@ -159,7 +159,7 @@ v4的PCB支撑柱容易断裂，所以改用M3双通六角铜柱，如图~\ref{f
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.5\columnwidth]{Screw.jpg}
-    \caption{M3x3 304不锈钢圆头十字盘头螺丝}
+    \caption{M3x3螺丝}
     \label{fig:Screw}
 \end{figure}
 
@@ -176,7 +176,7 @@ v4的PCB支撑柱容易断裂，所以改用M3双通六角铜柱，如图~\ref{f
 
 \section{3D打印}
 
-使用极光尔沃 A3S 3D打印机（如图~\ref{fig:A3S}）进行打样。详细参数如表~\ref{tab:A3S}。
+使用极光尔沃 A3S 3D打印机（如图~\ref{fig:A3S}）进行打样。
 
 \begin{figure}[htbp]
     \centering
@@ -184,6 +184,8 @@ v4的PCB支撑柱容易断裂，所以改用M3双通六角铜柱，如图~\ref{f
     \caption{JGAurora A3S}
     \label{fig:A3S}
 \end{figure}
+
+详细参数如表~\ref{tab:A3S}。
 
 \begin{table}[htbp]
     \centering
