--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[degree=bachelor,tocarialchapter,table,xcdraw]{thuthesis}
+\documentclass[degree=bachelor,tocarialchapter,table,xcdraw,draft]{thuthesis}
 
 % 在\documentclass中加入了 ,table,xcdraw 解决了用于表格颜色填充的宏包 \usepackage[table,xcdraw]{xcolor} 导致的xcolor不同参数重复声明的问题
 
@@ -57,7 +57,7 @@
 \input{data/PCB.tex}
 \input{data/PCB-v2.tex}
 \input{data/PCB-v3.tex}
-\input{data/Environment.tex}
+% \input{data/Environment.tex}
 \input{data/Program.tex}
 \input{data/UI.tex}
 \input{data/Communication.tex}
